# thesis

./: .gitignore  Makefile  TODOs  bibliography.bib  meeting-notes.txt  planning.txt  proposal.lhs  reify.dot  rewrite.lhs
architecture/: er-sample.graffle  generic-programming.graffle
architecture/overall.graffle/: data.plist  image1.tiff  image2.tiff  image3.tiff
architecture/sampleflow.graffle/: data.plist
continuations/: Continuations.hs  Continuations.lhs  HAppS.hs  Makefile  Model.hs  Sample.hs  SampleModel.hs  ideas.txt  web-continuations.cabal
continuations/Continuations/: Actions.hs  Base.lhs  Generics.hs  Graph.hs  Graph.lhs  HAppS.hs  Salvia.hs  Types.lhs
continuations/Generics/: Documentation.hs  HDBC.hs  Records.hs  SimpleInput.hs  Views.hs  Xml.hs
continuations/Generics/EMGM/: Form.hs  ToHtml.hs
continuations/Samples/: Arc.hs  User.hs
thesis/: Makefile  bibliography.bib  chris.fmt  conclusion.lhs  continuations.lhs  ermodels.aux.bak  ermodels.lhs  ermodels.out  formatting.lhs  introduction.lhs  outline.txt  quiz.lhs  thesis.lhs  views.lhs
thesis/continuations/: AST.lhs  ArrowBased.lhs  ArrowBasedInterface.lhs  ArrowSerialize.lhs  Defunctionalization.lhs  Monadic.lhs  MonadicInterface.lhs
thesis/ermodels/: coreinterface.lhs  encoding.lhs  entities.lhs  erdiagram.graffle  erdiagram.gv.dot  example.lhs  hlistinterface.lhs  inmeminterface.lhs  queryinterface.lhs  reldbinterface.lhs
thesis/quiz/: AllCode.lhs  ArrowBased.lhs  Quiz.lhs  QuizModel.lhs  QuizUrl.lhs  Routing.lhs  ermodel-black.graffle  ermodel.graffle
(+3 files in other folders)
